[gd_scene load_steps=10 format=3 uid="uid://cxl7hio6xhewp"]

[ext_resource type="Texture2D" uid="uid://dtbbwcjwxk4fd" path="res://Assets/Player/Bootle.png" id="1_a50ix"]
[ext_resource type="Script" path="res://Assets/scripts/PopUpBottle.gd" id="1_nkcmf"]
[ext_resource type="AudioStream" uid="uid://daubygth231pd" path="res://Blob.mp3" id="2_a5s7v"]
[ext_resource type="FontFile" uid="uid://b0hiocwb1jh1g" path="res://Assets/objects/fonts/kongtext.ttf" id="3_lj1rh"]

[sub_resource type="Animation" id="Animation_4or5x"]
resource_name = "Bottle pop"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.4, 0.5, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(72, 128), Vector2(29, 143), Vector2(23, 161), Vector2(21, 194), Vector2(20, 242), Vector2(21, 285), Vector2(25, 336)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.4, 0.5, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.490438, -1.14319, -1.79594, -2.77507, -3.42783, -3.91826]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_remove"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_snijb"]
resource_name = "Bottle pop 2"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../TextureRect2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(72, 128), Vector2(111, 141), Vector2(132, 198), Vector2(143, 252), Vector2(149, 333)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../TextureRect2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.652753, 2.4487, 2.93913, 3.59189]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_remove"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../TextureRect2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_m8rxg"]
resource_name = "BottleClick"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Button:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(4, 4), Vector2(4.5, 4.5), Vector2(4, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Button:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(49, 79), Vector2(44, 73), Vector2(49, 79)]
}

[sub_resource type="Animation" id="Animation_whxek"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(72, 128)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../TextureRect2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(72, 128)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../TextureRect2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../TextureRect2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Button:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../Button:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(49, 79)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5giy2"]
_data = {
"Bottle pop": SubResource("Animation_4or5x"),
"Bottle pop 2": SubResource("Animation_snijb"),
"BottleClick": SubResource("Animation_m8rxg"),
"RESET": SubResource("Animation_whxek")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nkcmf")

[node name="BottleSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_a5s7v")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../TextureRect")
libraries = {
"": SubResource("AnimationLibrary_5giy2")
}

[node name="AnimationPop" type="AnimationPlayer" parent="."]
root_node = NodePath("../TextureRect")
libraries = {
"": SubResource("AnimationLibrary_5giy2")
}

[node name="AnimationPop2" type="AnimationPlayer" parent="."]
root_node = NodePath("../TextureRect")
libraries = {
"": SubResource("AnimationLibrary_5giy2")
}

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 72.0
offset_top = 128.0
offset_right = 88.0
offset_bottom = 160.0
texture = ExtResource("1_a50ix")
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 72.0
offset_top = 128.0
offset_right = 88.0
offset_bottom = 160.0
texture = ExtResource("1_a50ix")
stretch_mode = 4

[node name="Button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 49.0
offset_top = 79.0
offset_right = 65.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
size_flags_stretch_ratio = 0.0
action_mode = 0
texture_normal = ExtResource("1_a50ix")

[node name="Clicks" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 7.0
offset_right = 88.0
offset_bottom = 18.0
scale = Vector2(0.8, 0.8)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_fonts/font = ExtResource("3_lj1rh")
theme_override_font_sizes/font_size = 8
text = "CLICKS:"
horizontal_alignment = 1

[node name="Score" type="RichTextLabel" parent="Clicks"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 28.25
offset_right = 83.874
offset_bottom = 11.0
grow_horizontal = 2
scale = Vector2(0.9, 0.9)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_fonts/normal_font = ExtResource("3_lj1rh")
theme_override_font_sizes/normal_font_size = 8
text = "0"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
